# auto-ensemble-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  python-publish2.yml
auto_ensemble_benchmark/: __init__.py  core.py  model_zoo.py
example/: test_benchmark.py
example/resultados_bench/: wine_ensembles_cv_results.csv  wine_ensembles_holdout_results.csv
